Updates from ShareLaTeX

--- a/0.0tuningpredictor.tex
+++ b/0.0tuningpredictor.tex
@@ -4,6 +4,7 @@
 % \documentclass[smallextended]{svjour3}
 % \documentclass[preprint,12pt,3p,number]{elsarticle}
 \usepackage{cite}
+\usepackage{eqnarray}
 \usepackage{multirow}
 \usepackage{color}
 \usepackage{graphics} 
@@ -49,7 +50,11 @@
 \begin{document}
 % \begin{frontmatter}
 \title{ Tuning for Software Analytics: is it Really Necessary?}
-\author{Wei Fu }
+% \author{Wei Fu }
+\author{
+       \alignauthor Wei Fu \\
+       \affaddr{North Carolina State University, USA}\\
+       \email{{wfu@ncsu.edu}}       }
 \maketitle
 % \thispagestyle{plain}
 \pagestyle{plain}
