--- a/tuningpredictor.bib
+++ b/tuningpredictor.bib
@@ -400,7 +400,7 @@ doi={10.1109/CEC.2008.4630793},}
   year =	2006,
   note =	"Web page, Office of the NASA Chief Technologist,
                   \url{http://www.sti.nasa.gov/tto/Spinoff2006/ct_1.htm}"
-}}
+}
 
 
 @article{fagan76,
@@ -1921,4 +1921,20 @@ year = {2012}
   author={Maclaurin, Dougal and Duvenaud, David and Adams, Ryan P},
   journal={arXiv preprint arXiv:1502.03492},
   year={2015}
+}
+
+
+@inproceedings{snoek2012practical,
+  title={Practical bayesian optimization of machine learning algorithms},
+  author={Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P},
+  booktitle={Advances in neural information processing systems},
+  pages={2951--2959},
+  year={2012}
+}
+
+@book{boyd2004convex,
+  title={Convex optimization},
+  author={Boyd, Stephen and Vandenberghe, Lieven},
+  year={2004},
+  publisher={Cambridge university press}
 }
